2003-10-24 Damien Sandras  <dsandras@seconix.com>

	* src/connection.cpp: Prevent too many channels to be opened.
	
2003-10-24 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp, src/main_window.h: Added 2 functions to
	update the main window items following the calling state or
	the currently opened/closed audio and video channels.

	* src/connection.cpp, src/connection.h: Use the previous function
	to update the GUI when channels are started/closed.
	
	* src/endpoint.cpp, src/gdkvideoio.cpp, src/gdkvideoio.h, 
	src/urlhandler.cpp, src/videograbber.cpp: Same as above.
	
2003-10-23 Damien Sandras  <dsandras@seconix.com>

	* src/common.h, src/config.cpp, src/pref_window.cpp: Display
	a warning when the user tries to enable video reception during
	a call.
	
2003-10-23 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Removed unuseful cout.

	* src/endpoint.cpp, src/endpoint.h: Code cleanups. Replaced the
	old GTK timeout for Non answered calls by a PWLib Notifier.
	That fixes a previous bug. Do not update the menu items individually
	in the code but use the 2 new menu.h functions written for that 
	purpose.
	
	* src/gdkvideoio.cpp, src/gdkvideoio.h:  Do not update the menu items 
	individually in the code but use the 2 new menu.h functions written 
	for that purpose.
	
	* src/menu.cpp, src/menu.h: Added a function that updates the 
	sensitivity of general menu items, non-related to the opening/closing
	of audio and video channels. Added another function that updates
	the sensitivity of general menu items related to the opening
	and closing of audio and video channels. Fixed previous bug
	so that the "Save snapshot" menu item is sensitive as soon
	as at least one video channel is opened (Reported by Kilian). 

	* src/urlhandler.cpp: Use the 2 previous functions.
	
2003-10-22 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Fixed possible bug in previous commit.
	
2003-10-22 Damien Sandras  <dsandras@seconix.com>
